[package]
name = "wifi-capture"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
ctrlc = "3.4.6"
libwifi = "0.4.6"
pcap = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"

